# rust-capnp-wasm

./: .gitignore  README.md  build.sh  deno.json
rust/: Cargo.toml
rust/capnp-util/: Cargo.toml
rust/capnp-util/src/: lib.rs  reusable_writer.rs
rust/event-capnp/: Cargo.toml  build.rs
rust/event-capnp/src/: capnp.rs  event.rs  lib.rs
src/: event.ts
src/capnp/: event.capnp
src/utils/: sha.ts  xxd.ts
