[workspace]
members = [
  "capnp-util",
  "event-capnp",
]
resolver = "2"

[workspace.dependencies]
capnp = { version = "0.19.6" }
capnpc = { version = "0.19.0" }
serde_json = { version = "1.0.117", features = ["preserve_order"] }
serde = { version = "1.0.203", features = ["derive"] }
wasm-bindgen = { version = "0.2.92" }
tsify = { version = "0.4.5", default-features = false, features = ["js"] }

[profile.release]
lto = "fat" # attempt to perform optimizations across all crates within the dependency graph.
codegen-units = 1 # more code generation units allows more of a crate to be processed in parallel possibly reducing compile time, but may produce slower code.
opt-level = "z"
# 0: no optimizations
# 1: basic optimizations
# 2: some optimizations
# 3: all optimizations
# "s": optimize for binary size
# "z": optimize for binary size, but also turn off loop vectorization.
# strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
