[package]
name = "event-capnp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# build a C-style shared library that can be dynamically loaded by a JavaScript runtime
crate-type = ["cdylib"]
name = "event_capnp"

[dependencies]
capnp = { workspace = true }
capnp-util = { path = "../capnp-util" }
once_cell = "1.18.0"
serde = { workspace = true }
tsify = { workspace = true }
wasm-bindgen = { workspace = true }

[build-dependencies]
capnpc = { workspace = true }
